force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <customHelpPage>Calculator</customHelpPage>
    <description>Stores the data of the candidates for hiring</description>
    <label>Candidate</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>