force-app/main/default/objects/Candidate__c/fields/Aadhar__c.field-meta.xml
<CustomField>
    <fullName>Aadhar__c</fullName>
    <label>Aadhar</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>