force-app/main/default/objects/Candidate__c/fields/Candidate_ID__c.field-meta.xml
<CustomField>
    <fullName>Candidate_ID__c</fullName>
    <description>It is a ID</description>
    <displayFormat>CID-{000000}</displayFormat>
    <label>Candidate ID</label>
    <type>AutoNumber</type>
</CustomField>