force-app/main/default/objects/Candidate__c/fields/Candidature_Status__c.field-meta.xml
<CustomField>
    <fullName>Candidature_Status__c</fullName>
    <label>Candidature Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Sent for Screening</fullName>
            </value>
            <value>
                <fullName>Shortlisted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Get the Availability</fullName>
            </value>
            <value>
                <fullName>Schedule Interview</fullName>
            </value>
            <value>
                <fullName>HR Round</fullName>
            </value>
            <value>
                <fullName>Release the Offer</fullName>
            </value>
            <value>
                <fullName>Recruited</fullName>
            </value>
            <value>
                <fullName>Initiate BGC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>