force-app/main/default/objects/Candidate__c/fields/If_Veteran_Type__c.field-meta.xml
<CustomField>
    <fullName>If_Veteran_Type__c</fullName>
    <label>If Veteran, Type?</label>
    <length>25</length>
    <type>Text</type>
</CustomField>