force-app/main/default/objects/Candidate__c/fields/Technical_Skills__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skills__c</fullName>
    <label>Technical Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Advanced Java</fullName>
            </value>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>ASP .Net</fullName>
            </value>
            <value>
                <fullName>Big Data</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>C# .Net</fullName>
            </value>
            <value>
                <fullName>C++</fullName>
            </value>
            <value>
                <fullName>Core Java</fullName>
            </value>
            <value>
                <fullName>J2EE</fullName>
            </value>
            <value>
                <fullName>Load Runner</fullName>
            </value>
            <value>
                <fullName>Manual Testing</fullName>
            </value>
            <value>
                <fullName>MS .Net</fullName>
            </value>
            <value>
                <fullName>Oracle</fullName>
            </value>
            <value>
                <fullName>QTP</fullName>
            </value>
            <value>
                <fullName>SAP ABAB</fullName>
            </value>
            <value>
                <fullName>SAP Basis</fullName>
            </value>
            <value>
                <fullName>Selenium</fullName>
            </value>
            <value>
                <fullName>SlaesForce CRM</fullName>
            </value>
            <value>
                <fullName>SQL Server</fullName>
            </value>
            <value>
                <fullName>Visualforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>