force-app/main/default/objects/Candidate__c/validationRules/A_months_Notice_for_Belagavi.validationRule-meta.xml
<ValidationRule>
    <fullName>A_months_Notice_for_Belagavi</fullName>
    <active>true</active>
    <description>1 month notice for Belagavi region</description>
    <errorConditionFormula>AND(
       ISPICKVAL( Location__c ,&apos;Belagavi&apos;) ,
      NOT ISPICKVAL( Notice_Period__c,&apos;1 Month&apos; )
)</errorConditionFormula>
    <errorDisplayField>Notice_Period__c</errorDisplayField>
    <errorMessage>The notice period for &apos;Belagavi&apos; location is &apos;1 Month&apos;</errorMessage>
</ValidationRule>