force-app/main/default/objects/Candidate__c/validationRules/Aadhar_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Aadhar_Number</fullName>
    <active>true</active>
    <errorConditionFormula>IF(LEN(Aadhar__c) != 12, true, false)</errorConditionFormula>
    <errorDisplayField>Aadhar__c</errorDisplayField>
    <errorMessage>Enter a 12 digit Aadhar number</errorMessage>
</ValidationRule>