force-app/main/default/objects/Candidate__c/validationRules/Passport_mandatory_if_PAN_present.validationRule-meta.xml
<ValidationRule>
    <fullName>Passport_mandatory_if_PAN_present</fullName>
    <active>true</active>
    <description>Make passport mandatory if PAN is present</description>
    <errorConditionFormula>AND( NOT ISBLANK( PAN_Number__c ) , 
ISBLANK( Passport_Number__c ) )</errorConditionFormula>
    <errorDisplayField>Passport_Number__c</errorDisplayField>
    <errorMessage>Enter the Passport Number if PAN is not blank.</errorMessage>
</ValidationRule>